remove unnec. import, fix off center title in mobile view

--- a/src/components/all.scss
+++ b/src/components/all.scss
@@ -404,6 +404,9 @@ $menu-label-color: $white-ter;;
     height: 5rem;
     width: 5rem;
   }
+  .home-cv-title {
+    width: 50%
+  }
 }
 
 @import "~bulma";
